charts/otel-demo-fork/examples/public-hosted-httproute/rendered/collector-httproute.yaml
---
# Source: otel-demo-fork/templates/collector-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-collector
  labels:
    helm.sh/chart: otel-demo-fork-0.12.14
    app.kubernetes.io/name: otel-demo-fork
    app.kubernetes.io/instance: example
    
    app.kubernetes.io/version: "0.12.14"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: otel-demo-gateway
  hostnames:
    - "otel-demo.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /otlp-http
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: otel-collector
          port: 4318
